--- a/template/leather-loafers.html
+++ b/template/leather-loafers.html
@@ -10,13 +10,13 @@
 <body>
   <nav class="navbar sticky-top navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt="logo.png" width="80" height="24"></a>
+      <a class="navbar-brand" href="/index.html"><img src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt="logo.png" width="80" height="24"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse justify-content-end navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+          <a class="nav-link active" aria-current="page" href="/index.html">HOME</a>
           <a class="nav-link" href="#">CONTACT</a>
           <a class="nav-link" href="#">SIGN IN</a>
           <i class="fa" style="font-size:24px">&#xf07a;</i><span id="cart-count" class="badge text-bg-light"></span>
@@ -25,10 +25,9 @@
     </div>
   </nav>
   <header>
-    <h1 class="text-center mt-5 pt-5">Ballet Pumps</h1>
+    <h1 class="text-center mt-5 pt-5">Leather Loafers</h1>
     <div id="imageSection"></div>
   </header>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="ballet-pumps.js"></script>
+    <script type="text/javascript" src="/app/leather-loafers.js"></script>
 </body>
 </html>
