--- a/template/outdoor-boots.html
+++ b/template/outdoor-boots.html
@@ -5,17 +5,18 @@
     <link rel="icon" href="/assets/images/icon/logo.ico" type="image/icon type">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet" href="/assets/minimal-sneakers.css">
 </head>
 <body>
   <nav class="navbar sticky-top navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt="logo.png" width="80" height="24"></a>
+      <a class="navbar-brand" href="/index.html"><img src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt="logo.png" width="80" height="24"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse justify-content-end navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+          <a class="nav-link active" aria-current="page" href="/index.html">HOME</a>
           <a class="nav-link" href="#">CONTACT</a>
           <a class="nav-link" href="#">SIGN IN</a>
           <i class="fa" style="font-size:24px">&#xf07a;</i><span id="cart-count" class="badge text-bg-light"></span>
@@ -24,15 +25,9 @@
     </div>
   </nav>
   <header>
-    <h1>CATEGORIES FOR WOMEN</h1>
+    <h1 class="text-center mt-5 pt-5">Outdoor Boots</h1>
+    <div id="imageSection"></div>
   </header>
-  <section>
-    <a href="wedges.html"><h1>WEDGES</h1></a>
-    <a href="ballet-pumps.html"><h1>BALLET PUMPS</h1></a>
-    <a href="mules.html"><h1>MULES</h1></a>
-    <a href="canvass-shoes.html"><h1>CANVASS SHOES</h1></a>
-    <a href="loafers.html"><h1>LOAFERS</h1></a>
-  </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/app/outdoor-boots.js"></script>
 </body>
 </html>
