--- a/template/canvass-shoes.html
+++ b/template/canvass-shoes.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/assets/images/icon/logo.ico" type="image/icon type">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-  <link rel="stylesheet" href="/assets/minimal-sneakers.css">
+  <script type="text/javascript" src="/app/js/function.js"></script>
 </head>
 
 <body>
@@ -30,7 +30,9 @@
     <h1 class="text-center mt-5 pt-5">Canvass Shoes</h1>
     <div id="imageSection"></div>
   </header>
-  <script type="text/javascript" src="/app/canvass-shoes.js"></script>
+  <script>
+    getJSONData("/data/canvass-shoes.json");
+  </script>
 </body>
 
 </html>
