--- a/template/wedges.html
+++ b/template/wedges.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/assets/images/icon/logo.ico" type="image/icon type">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="/assets/minimal-sneakers.css">
+    <script type="text/javascript" src="/app/js/function.js"></script>
 </head>
 <body>
   <nav class="navbar sticky-top navbar-expand-lg bg-light">
@@ -28,6 +28,8 @@
     <h1 class="text-center mt-5 pt-5">Wedges</h1>
     <div id="imageSection"></div>
   </header>
-    <script type="text/javascript" src="/app/wedges.js"></script>
+  <script>
+    getJSONData("/data/wedges.json");
+  </script>
 </body>
 </html>
