added btn for the cart and removed sneakers copy

--- a/template/minimal-sneakers.html
+++ b/template/minimal-sneakers.html
@@ -20,7 +20,7 @@
           <a class="nav-link active" aria-current="page" href="/index.html"">HOME</a>
           <a class="nav-link" href="#">CONTACT</a>
           <a class="nav-link" href="#">SIGN IN</a>
-          <i class="fa" style="font-size:24px">&#xf07a;</i><span id="cart-count" class="badge text-bg-light"></span>
+          <button><i class="fa" style="font-size:24px">&#xf07a;</i><span id="cart-count" class="badge text-bg-light"></span></button>
         </div>
       </div>
     </div>
