--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,3 +54,57 @@ footer{
     height: 200px;
     display: flex;
 }
+@media (max-width:1280px){
+    .container .male-content {
+        position: absolute;
+        top:50%;
+        left:23%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+    .container .women-content {
+        position: absolute;
+        top:50%;
+        left:72.9%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+}
+@media (max-width:768px){
+    .container .male-content {
+        position: absolute;
+        top:25%;
+        left:35%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+    .container .women-content {
+        position: absolute;
+        top:75%;
+        left:34%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+    .image-container:hover {
+        transform: scale(1);
+    }
+}
+@media (max-width:375px){
+    .container .male-content {
+        position: absolute;
+        top:25%;
+        left:20%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+    .container .women-content {
+        position: absolute;
+        top:75%;
+        left:20%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+    .image-container:hover {
+        transform: scale(1);
+    }
+}
