--- a/template/wedges.html
+++ b/template/wedges.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Shazada Philippines</title>
-    <link rel="icon" href="/assets/images/icon/logo.ico" type="image/icon type">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <script type="text/javascript" src="/app/js/function.js"></script>
+  <title>Shazada Philippines</title>
+  <link rel="icon" href="/assets/images/icon/logo.ico" type="image/icon type">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <link rel="stylesheet" href="/assets/css/main.css" />
+  <script type="text/javascript" src="/app/js/function.js"></script>
 </head>
+
 <body>
-  <nav class="navbar sticky-top navbar-expand-lg bg-light">
+  <nav class="navbar fixed-top navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/index.html"><img src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt="logo.png" width="80" height="24"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="/index.html"><img
+          src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt="
+          logo.png" width="80" height="24"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse justify-content-end navbar-collapse" id="navbarNavAltMarkup">
@@ -19,7 +26,8 @@
           <a class="nav-link active" aria-current="page" href="/index.html">HOME</a>
           <a class="nav-link" href="#">CONTACT</a>
           <a class="nav-link" href="#">SIGN IN</a>
-          <button><i class="fa" style="font-size:24px">&#xf07a;</i><span id="cart-count" class="badge text-bg-light"></span></button>
+          <a href=""><i class="fa" style="font-size: 24px">&#xf07a;</i><span id="cart-count"
+              class="badge text-bg-warning"></span></a>
         </div>
       </div>
     </div>
@@ -32,4 +40,5 @@
     getJSONData("/data/wedges.json");
   </script>
 </body>
+
 </html>
