added form group and embed google-map

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 html, body {
     max-width: 100%!important; overflow-x: hidden!important
-} 
+}
 .collapse {
     float: right;
 }
@@ -12,8 +12,24 @@ html, body {
     bottom:25%;
     left:10%;
 }
+.shoes-parallax {
+    width: 30%;
+    margin-left: 35%;
+    padding-top: 10%;
+}
+.wrapper {
+    overflow-y: auto;
+    overflow-x: hidden;
+    perspective: 10px;
+    transform-style: preserve-3d;
+    z-index: -1;
+    object-fit: cover;
+}
 .best-seller {
-    padding-top: 15%;
+    position: absolute;
+    top:113%;
+    left:42%;
+    transform: translateZ(-5px) scale(1.5);
 }
 #best-seller-image {
     padding-top: 1%;
@@ -63,10 +79,18 @@ html, body {
     transform: translate(-50%, -50%);
     text-align: center;
 }
+.form-control {
+    border:0;
+}
 footer{
     background-color: black;
     height: 200px;
     display: flex;
+}
+.gmap {
+    position: absolute;
+    right: 5%;
+    bottom:5%;
 }
 @media (max-width:1280px){
     .best-seller {
@@ -89,6 +113,19 @@ footer{
         transform: translate(-50%, -50%);
         text-align: center;
     }
+    .best-seller {
+        position: absolute;
+        top:13%;
+        left:42%;
+        transform: translateZ(-5px) scale(1.5);
+    }
+    .gmap {
+        position: absolute;
+        right: 1%;
+        bottom:5%;
+        height: 99%;
+        width: 45%;
+    }
 }
 @media (max-width:768px){
     .container .male-content {
@@ -108,6 +145,15 @@ footer{
     .image-container:hover {
         transform: scale(1);
     }
+    .best-seller {
+        position: absolute;
+        top:35%;
+        left:42%;
+        transform: translateZ(-5px) scale(1.5);
+    }
+    #best-seller-image {
+        margin-top: 20%;
+    }
 }
 @media (max-width:770px){
     .container .male-content {
@@ -126,6 +172,12 @@ footer{
     }
     .image-container:hover {
         transform: scale(1);
+    }
+    .shoes-parallax {
+        display: none;
+    }
+    .gmap {
+        display: none;
     }
 }
 @media (max-width:375px){
@@ -151,5 +203,20 @@ footer{
     }
     .image-container:hover {
         transform: scale(1);
+    }
+    .shoes-parallax {
+        display: none;
+    }
+    .mb-3 {
+        min-width: 100%;
+    }
+    .best-seller {
+        position: absolute;
+        top:50%;
+        left:30%;
+        transform: translateZ(-5px) scale(1.5);
+    }
+    .gmap {
+        display: none;
     }
 }
