navbar fixed and some alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,12 @@
 html, body {
     max-width: 100%!important; overflow-x: hidden!important
 }
+.nav-item {
+    float:right;
+}
+.categories {
+    margin-top: 8%;
+}
 .collapse {
     float: right;
 }
