--- a/template/male-categories.html
+++ b/template/male-categories.html
@@ -43,21 +43,26 @@
     <h1 class="categories pt-5 text-center">CATEGORIES FOR MEN</h1>
   </header>
   <section>
-    <a href="minimal-sneakers.html">
-      <h1>MINIMAL SNEAKERS</h1>
-    </a>
-    <a href="oxford-shoes.html">
-      <h1>OXFORD SHOES</h1>
-    </a>
-    <a href="derby-shoes.html">
-      <h1>DERBY SHOES</h1>
-    </a>
-    <a href="leather-loafers.html">
-      <h1>LEATHER LOAFERS</h1>
-    </a>
-    <a href="outdoor-boots.html">
-      <h1>OUTDOOR BOOTS</h1>
-    </a>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <a href="/template/minimal-sneakers.html"><img src="https://i.ytimg.com/vi/k_EfKYQGTU8/maxresdefault.jpg"
+              class="card-img-top" alt="..."></a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <a href="/template/oxford-shoes.html"><img src="https://i.ytimg.com/vi/qD7oM088gRg/maxresdefault.jpg"
+              class="card-img-top" alt="..."></a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <a href="/template/derby-shoes.html"><img src="https://i.ytimg.com/vi/pa-y3sZxLs8/maxresdefault.jpg"
+              class="card-img-top" alt="..."></a>
+        </div>
+      </div>
+    </div>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
