--- a/template/women-categories.html
+++ b/template/women-categories.html
@@ -43,21 +43,38 @@
     <h1 class="categories pt-5 text-center">CATEGORIES FOR WOMEN</h1>
   </header>
   <section>
-    <a href="wedges.html">
-      <h1>WEDGES</h1>
-    </a>
-    <a href="ballet-pumps.html">
-      <h1>BALLET PUMPS</h1>
-    </a>
-    <a href="mules.html">
-      <h1>MULES</h1>
-    </a>
-    <a href="canvass-shoes.html">
-      <h1>CANVASS SHOES</h1>
-    </a>
-    <a href="loafers.html">
-      <h1>LOAFERS</h1>
-    </a>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <a href="/template/ballet-pumps.html"><img
+              src="https://lh3.googleusercontent.com/GcbQk7tb2W43VyzXmZ-C8dtu1h2IzhSkeEltM4MxGmUK-ZE_GZhy-5O4xB95irv_hNNSzCgLIdUVbViR5MqOX_zNpg=w500-rw"
+              class="card-img-top" alt="..."></a>
+          <div class="card-body">
+            <h5 class="card-title">Ballet Pumps</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card card-wedge h-100">
+          <a href="/template/ballet-pumps.html"><img
+              src="https://lh3.googleusercontent.com/36e-qikZg_5BQzwUuR4TQS1jXIEp20F0qnNyN24YvGQDtvV3EONpUK0gVfPjSwtX3Ojb8cf3Qvp9QyFUsR9WjOMMvGnP=w500-rw"
+              class="card-img-top" alt="..."></a>
+          <div class="card-body">
+            <h5 class="card-title">Wedges</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <a href="/template/mules.html"><img
+              src="https://lh3.googleusercontent.com/8QiC3OjvhDEWYGyJEawulq6PACXpKkTuUnplJfoC8Z5w42NP6cBKIrZs0FY3Hl9n9ombqKQxmeATh9Cpy8vLJXFYsNk=w500-rw"
+              class="card-img-top" alt="..."></a>
+          <div class="card-body">
+            <h5 class="card-title-mule">Mules</h5>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
