changed best seller shoes

--- a/template/male-categories.html
+++ b/template/male-categories.html
@@ -42,7 +42,7 @@
   <header>
     <h1 class="categories pt-5 text-center">CATEGORIES FOR MEN</h1>
   </header>
-  <section>
+  <section id="men-gategories">
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
