--- a/template/minimal-sneakers.html
+++ b/template/minimal-sneakers.html
@@ -43,7 +43,7 @@
   </nav>
   <header>
     <h1 class="text-center mt-5 pt-5">Minimal Sneakers</h1>
-    <div id="imageSection"></div>c
+    <div id="imageSection"></div>
   </header>
   <script>
     getJSONData("/data/minimal-sneakers.json");
