--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,9 @@ html, body {
 .card-title-mule {
     margin-top: 7%;
 }
+.card-image {
+    margin-top: 5% ;
+}
 .collapse {
     float: right;
 }
