--- a/template/male-categories.html
+++ b/template/male-categories.html
@@ -45,19 +45,19 @@
   <section id="men-gategories">
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
-        <div class="card h-100">
+        <div class="card-image h-100">
           <a href="/template/minimal-sneakers.html"><img src="https://i.ytimg.com/vi/k_EfKYQGTU8/maxresdefault.jpg"
               class="card-img-top" alt="..."></a>
         </div>
       </div>
       <div class="col">
-        <div class="card h-100">
+        <div class="card-image h-100">
           <a href="/template/oxford-shoes.html"><img src="https://i.ytimg.com/vi/qD7oM088gRg/maxresdefault.jpg"
               class="card-img-top" alt="..."></a>
         </div>
       </div>
       <div class="col">
-        <div class="card h-100">
+        <div class="card-image h-100">
           <a href="/template/derby-shoes.html"><img src="https://i.ytimg.com/vi/pa-y3sZxLs8/maxresdefault.jpg"
               class="card-img-top" alt="..."></a>
         </div>
