--- a/template/women-categories.html
+++ b/template/women-categories.html
@@ -45,7 +45,7 @@
   <section>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
-        <div class="card h-100">
+        <div class="card card-image  h-100">
           <a href="/template/ballet-pumps.html"><img
               src="https://lh3.googleusercontent.com/GcbQk7tb2W43VyzXmZ-C8dtu1h2IzhSkeEltM4MxGmUK-ZE_GZhy-5O4xB95irv_hNNSzCgLIdUVbViR5MqOX_zNpg=w500-rw"
               class="card-img-top" alt="..."></a>
@@ -55,7 +55,7 @@
         </div>
       </div>
       <div class="col">
-        <div class="card card-wedge h-100">
+        <div class="card card-wedge card-image  h-100">
           <a href="/template/ballet-pumps.html"><img
               src="https://lh3.googleusercontent.com/36e-qikZg_5BQzwUuR4TQS1jXIEp20F0qnNyN24YvGQDtvV3EONpUK0gVfPjSwtX3Ojb8cf3Qvp9QyFUsR9WjOMMvGnP=w500-rw"
               class="card-img-top" alt="..."></a>
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="col">
-        <div class="card h-100">
+        <div class="card  card-image h-100">
           <a href="/template/mules.html"><img
               src="https://lh3.googleusercontent.com/8QiC3OjvhDEWYGyJEawulq6PACXpKkTuUnplJfoC8Z5w42NP6cBKIrZs0FY3Hl9n9ombqKQxmeATh9Cpy8vLJXFYsNk=w500-rw"
               class="card-img-top" alt="..."></a>
