added show button on image hover

--- a/template/minimal-sneakers.html
+++ b/template/minimal-sneakers.html
@@ -43,7 +43,29 @@
   </nav>
   <header>
     <h1 class="text-center mt-5 pt-5">Minimal Sneakers</h1>
-    <div id="imageSection"></div>
+    <figure id="container">
+      <!-- <img src="https://images.summitmedia-digital.com/spotph/images/2020/01/28/6-15-1580208566.jpg" alt="sample89" />
+      <figcaption>
+        <h3>Add to cart</h3>
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="container">
+      <img src="https://mensflair.com/wp-content/uploads/2022/06/MinimalistSneakerBrands15-768x960.jpg"
+        alt="sample94" />
+      <figcaption>
+        <h3>Add to cart</h3>
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="container">
+      <img src="https://mensflair.com/wp-content/uploads/2022/06/MinimalistSneakerBrands10-768x960.jpg"
+        alt="sample92" />
+      <figcaption>
+        <h3>Add to cart</h3>
+      </figcaption>
+      <a href="#"></a> -->
+    </figure>
   </header>
   <script>
     getJSONData("/data/minimal-sneakers.json");
