--- a/template/derby-shoes.html
+++ b/template/derby-shoes.html
@@ -8,6 +8,7 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/buttonImageHover.css" />
   <script type="text/javascript" src="/app/js/function.js"></script>
 </head>
 
@@ -42,7 +43,7 @@
   </nav>
   <header>
     <h1 class="text-center mt-5 pt-5">Derby Shoes</h1>
-    <div id="imageSection"></div>
+    <figure id="container"></figure>
   </header>
   <script>
     getJSONData("/data/derby-shoes.json");
