women categogies complete final UI

--- a/template/women-categories.html
+++ b/template/women-categories.html
@@ -26,6 +26,12 @@
             <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/template/men-categories.html">Men</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/template/women-categories.html">Women</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
@@ -56,7 +62,7 @@
       </div>
       <div class="col">
         <div class="card card-wedge card-image  h-100">
-          <a href="/template/ballet-pumps.html"><img
+          <a href="/template/wedges.html"><img
               src="https://lh3.googleusercontent.com/36e-qikZg_5BQzwUuR4TQS1jXIEp20F0qnNyN24YvGQDtvV3EONpUK0gVfPjSwtX3Ojb8cf3Qvp9QyFUsR9WjOMMvGnP=w500-rw"
               class="card-img-top" alt="..."></a>
           <div class="card-body">
