--- a/template/derby-shoes.html
+++ b/template/derby-shoes.html
@@ -15,9 +15,9 @@
 <body>
   <nav class="navbar navbar-expand-lg fixed-top bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/index.html""><img src="
+      <a class="navbar-brand" href="/index.html"><img src="
         https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt=" logo.png"
-        width="80" height="24"></a>
+          width="80" height="24"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -26,6 +26,12 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/template/men-categories.html">Men</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/template/women-categories.html">Women</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
