--- a/template/minimal-sneakers.html
+++ b/template/minimal-sneakers.html
@@ -28,6 +28,12 @@
             <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/template/men-categories.html">Men</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/template/women-categories.html">Women</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
