--- a/template/mules.html
+++ b/template/mules.html
@@ -8,15 +8,16 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/buttonImageHover.css" />
   <script type="text/javascript" src="/app/js/function.js"></script>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg fixed-top bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/index.html""><img src="
+      <a class="navbar-brand" href="/index.html"><img src="
         https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt=" logo.png"
-        width="80" height="24"></a>
+          width="80" height="24"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -25,6 +26,12 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/template/men-categories.html">Men</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/template/women-categories.html">Women</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
@@ -42,7 +49,7 @@
   </nav>
   <header>
     <h1 class="text-center mt-5 pt-5">Mules</h1>
-    <div id="imageSection"></div>
+    <figure id="container"></figure>
   </header>
   <script>
     getJSONData("/data/mules.json");
