--- a/template/mules.html
+++ b/template/mules.html
@@ -40,13 +40,33 @@
             <a class="nav-link">Sign in</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <a href=""><i class="fa" style="font-size: 24px">&#xf07a;</i><span id="cart-count"
-              class="badge text-bg-warning"></span></a>
+        <form class="d-flex">
+          <i class="fa" data-bs-toggle="modal" data-bs-target="#exampleModal" style="font-size: 24px">&#xf07a;</i><span
+            id="cart-count" class="badge text-bg-warning"></span>
         </form>
       </div>
     </div>
   </nav>
+  <header>
+    <div class="container" id="men-women-container"></div>
+  </header>
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <header>
     <h1 class="text-center mt-5 pt-5">Mules</h1>
     <figure id="container"></figure>
