--- a/template/ballet-pumps.html
+++ b/template/ballet-pumps.html
@@ -28,10 +28,10 @@
             <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/template/men-categories.html">Men</a>
+            <a class="nav-link" aria-current="page" href="/template/men-categories.html">Men</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/template/women-categories.html">Women</a>
+            <a class="nav-link" aria-current="page" href="/template/women-categories.html">Women</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
