--- a/template/women-categories.html
+++ b/template/women-categories.html
@@ -66,7 +66,7 @@
     </div>
   </div>
   <header>
-    <h1 class="categories pt-5 text-center">CATEGORIES FOR WOMEN</h1>
+    <h1 class="categories text-center">CATEGORIES FOR WOMEN</h1>
   </header>
   <section>
     <div class="row row-cols-1 row-cols-md-3 g-4">
