--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,40 @@ html, body {
 .fa:hover {
     cursor: pointer;
 }
+.modal-body {
+    display:flex;
+    width: 70%;
+    margin-bottom: 30px;
+}
+#root {
+    width: 60%;
+    display: grid;
+    grid-template-columns: (2, 1fr);
+}
+.sidebar {
+    width: 40%;
+    border-radius: #eee;
+    margin-left: 20px;
+    padding: 15px;
+    text-align: center;
+}
+.foot {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0px;
+    padding: 10px 0px;
+    border-top: 1px solid #333;
+}
+.head {
+    background-color: goldenrod;
+    border-radius: 3px;
+    height: 40px;
+    padding: 10px;
+    margin-bottom: 20px;
+    color:#fff;
+    display: flex;
+    align-items: center;
+}
 .categories {
     margin-top: 15%;
 }
