--- a/template/minimal-sneakers.html
+++ b/template/minimal-sneakers.html
@@ -58,7 +58,17 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          ...
+          <div id="root"></div>
+          <div class="sidebar">
+            <div class="head">
+              <p>My Cart</p>
+            </div>
+            <div id="cart-item">Your cart is empty</div>
+            <div class="foot">
+              <h3>Total</h3>
+              <h2 id="total">₱ 1000</h2>
+            </div>
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
