--- a/template/about.html
+++ b/template/about.html
@@ -8,8 +8,6 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <link rel="stylesheet" href="/assets/css/main.css" />
-  <link rel="stylesheet" href="/assets/css/buttonImageHover.css" />
-  <script type="text/javascript" src="/app/js/function.js"></script>
 </head>
 
 <body>
@@ -68,12 +66,9 @@
     </div>
   </div>
   <header>
-    <h1 class="text-center mt-5 pt-5">Oxford Shoes</h1>
-    <figure id="container"></figure>
+    <h1 class="categories text-center">About</h1>
   </header>
-  <script>
-    getJSONData("/data/oxford-shoes.json");
-  </script>
+  </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
