footer implementation for all pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -223,4 +223,11 @@ html, body {
     .gmap {
         display: none;
     }
+    .copyright-footer {
+        display: none;
+    }
+    #shazada-footer {
+        position: absolute;
+        right:55%;
+    }
 }
