--- a/template/about.html
+++ b/template/about.html
@@ -8,6 +8,7 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/about-us.css" />
 </head>
 
 <body>
@@ -66,9 +67,31 @@
     </div>
   </div>
   <header>
-    <h1 class="categories text-center">About</h1>
+    <h1 class="text-center">About Us</h1>
   </header>
+  <section class="about-us-bg">
+    <article class="about-us">
+      <p class="introduction">Welcome to Shazada! We are group 4
+        .<br />
+      <p>So, What in the world is a "Shazada?"</p>
+      <p>Well, We created this site because we want</p>
+      <p>our male and women to buy more shoes in our site.</p>
+    </article>
   </section>
+  <footer id="footer">
+    <div class="mt-2 ms-5">
+      <span class="shazada-margin-bold">Shazada</span>
+      <p>Phone: 02-8123-4567</p>
+      <p>Email: group4@gmail.com</p>
+      <p>Address: kodego
+        18th floor, The W Fifth Avenue, 5th Ave, Taguig, 1630 Metro Manila</p>
+      <div class="row-cols-auto d-flex">
+        <div class="col-sm-10">
+          <input type="email" class="form-control" id="form-control" placeholder="Enter Your Email">
+          <button href="" class="btn rounded-pill btn-white mt-3 text-bg-warning" type="submit"
+            role="button">Subscribe</button>
+        </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
