--- a/template/men-categories.html
+++ b/template/men-categories.html
@@ -90,6 +90,20 @@
       </div>
     </div>
   </section>
+  <footer id="footer">
+    <div class="mt-2 ms-5">
+      <span class="shazada-margin-bold">Shazada</span>
+      <p>Phone: 02-8123-4567</p>
+      <p>Email: group4@gmail.com</p>
+      <p>Address: kodego
+        18th floor, The W Fifth Avenue, 5th Ave, Taguig, 1630 Metro Manila</p>
+      <div class="row-cols-auto d-flex">
+        <div class="col-sm-10">
+          <input type="email" class="form-control" placeholder="Enter Your Email">
+          <button href="" class="btn rounded-pill btn-white mt-3 text-bg-warning" type="submit"
+            role="button">Subscribe</button>
+        </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
