--- a/template/wedges.html
+++ b/template/wedges.html
@@ -71,6 +71,20 @@
     <h1 class="text-center mt-5 pt-5">Wedges</h1>
     <figure id="container"></figure>
   </header>
+  <footer id="footer">
+    <div class="mt-2 ms-5">
+      <span class="shazada-margin-bold">Shazada</span>
+      <p>Phone: 02-8123-4567</p>
+      <p>Email: group4@gmail.com</p>
+      <p>Address: kodego
+        18th floor, The W Fifth Avenue, 5th Ave, Taguig, 1630 Metro Manila</p>
+      <div class="row-cols-auto d-flex">
+        <div class="col-sm-10">
+          <input type="email" class="form-control" id="form-control" placeholder="Enter Your Email">
+          <button href="" class="btn rounded-pill btn-white mt-3 text-bg-warning" type="submit"
+            role="button">Subscribe</button>
+        </div>
+  </footer>
   <script>
     getJSONData("/data/wedges.json");
   </script>
