refactored added comments for code review

--- a/template/about.html
+++ b/template/about.html
@@ -80,7 +80,7 @@
   </section>
   <footer id="footer">
     <div class="mt-2 ms-5">
-      <span class="shazada-margin-bold">Shazada</span>
+      <span style="font-size: 1.5rem;font-weight: bold;">Shazada</span>
       <p>Phone: 02-8123-4567</p>
       <p>Email: group4@gmail.com</p>
       <p>Address: kodego
