--- a/template/ballet-pumps.html
+++ b/template/ballet-pumps.html
@@ -3,16 +3,32 @@
 
 <head>
   <title>Shazada Philippines</title>
-  <link rel="icon" href="/assets/images/icon/logo.ico" type="image/icon type">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <!--META TAGS-->
+  <meta charset="UTF-8">
+  <meta name="description" content="online shoes shopping cart">
+  <meta name="keywords" content="men and women">
+  <meta name="author" content="group4">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Hypertext reference for the icon of Title Bar-->
+  <link rel="icon" href="/assets/images/icon/logo.ico" type="image/icon type" />
+  <!--Bootstrap CSS CDN-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <!--Font Awesome CDN-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+  <!--Google Font CDN-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
+  <!--External CSS-->
   <link rel="stylesheet" href="/assets/css/main.css" />
   <link rel="stylesheet" href="/assets/css/buttonImageHover.css" />
+  <!--External Javascript-->
   <script type="text/javascript" src="/app/js/function.js"></script>
 </head>
 
 <body>
+  <!--Navbar-->
   <nav class="navbar navbar-expand-lg fixed-top bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="/index.html"><img src="
@@ -50,6 +66,7 @@
   <header>
     <div class="container" id="men-women-container"></div>
   </header>
+  <!--Checkout page static modal-->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -73,7 +90,7 @@
   </header>
   <footer id="footer">
     <div class="mt-2 ms-5">
-      <span class="shazada-margin-bold">Shazada</span>
+      <span style="font-size: 1.5rem;font-weight: bold;">Shazada</span>
       <p>Phone: 02-8123-4567</p>
       <p>Email: group4@gmail.com</p>
       <p>Address: kodego
