adjsut card size in the women categories

--- a/template/women-categories.html
+++ b/template/women-categories.html
@@ -40,7 +40,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            <a class="nav-link" aria-current="page" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/template/men-categories.html">Men</a>
@@ -74,7 +74,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          ...
+          Sample Static Data
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -89,7 +89,7 @@
   <section>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
-        <div class="card card-image  h-100">
+        <div class="card card-image  h-50">
           <a href="/template/ballet-pumps.html"><img
               src="https://lh3.googleusercontent.com/GcbQk7tb2W43VyzXmZ-C8dtu1h2IzhSkeEltM4MxGmUK-ZE_GZhy-5O4xB95irv_hNNSzCgLIdUVbViR5MqOX_zNpg=w500-rw"
               class="card-img-top" alt="..."></a>
@@ -99,7 +99,7 @@
         </div>
       </div>
       <div class="col">
-        <div class="card card-wedge card-image  h-100">
+        <div class="card card-wedge card-image  h-50">
           <a href="/template/wedges.html"><img
               src="https://lh3.googleusercontent.com/36e-qikZg_5BQzwUuR4TQS1jXIEp20F0qnNyN24YvGQDtvV3EONpUK0gVfPjSwtX3Ojb8cf3Qvp9QyFUsR9WjOMMvGnP=w500-rw"
               class="card-img-top" alt="..."></a>
@@ -109,7 +109,7 @@
         </div>
       </div>
       <div class="col">
-        <div class="card  card-image h-100">
+        <div class="card  card-image h-50">
           <a href="/template/mules.html"><img
               src="https://lh3.googleusercontent.com/8QiC3OjvhDEWYGyJEawulq6PACXpKkTuUnplJfoC8Z5w42NP6cBKIrZs0FY3Hl9n9ombqKQxmeATh9Cpy8vLJXFYsNk=w500-rw"
               class="card-img-top" alt="..."></a>
@@ -122,7 +122,7 @@
   </section>
   <footer id="footer">
     <div class="mt-2 ms-5">
-      <span class="shazada-margin-bold">Shazada</span>
+      <span style="font-size: 1.5rem;font-weight: bold;">Shazada</span>
       <p>Phone: 02-8123-4567</p>
       <p>Email: group4@gmail.com</p>
       <p>Address: kodego
