refactor title bar for all pages

--- a/template/women-categories.html
+++ b/template/women-categories.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Shazada Philippines</title>
+  <title>Women Categories</title>
   <!--META TAGS-->
   <meta charset="UTF-8">
   <meta name="description" content="online shoes shopping cart">
