--- a/template/about.html
+++ b/template/about.html
@@ -96,19 +96,21 @@
       <p>our male and women to buy more shoes in our site.</p>
     </article>
   </section>
-  <footer id="footer">
-    <div class="mt-2 ms-5">
+  <footer id="shazada-footer">
+    <div class="mt-2 ms-5 container">
       <span style="font-size: 1.5rem;font-weight: bold;">Shazada</span>
       <p>Phone: 02-8123-4567</p>
       <p>Email: group4@gmail.com</p>
       <p>Address: kodego
         18th floor, The W Fifth Avenue, 5th Ave, Taguig, 1630 Metro Manila</p>
       <div class="row-cols-auto d-flex">
-        <div class="col-sm-10">
-          <input type="email" class="form-control" id="form-control" placeholder="Enter Your Email">
+        <div class="col-sm-3">
+          <input type="email" class="form-control" class="footer-form-control" placeholder="Enter Your Email">
           <button href="" class="btn rounded-pill btn-white mt-3 text-bg-warning" type="submit"
             role="button">Subscribe</button>
         </div>
+      </div>
+    </div>
   </footer>
   <!--Bootstrap Javascript CDN-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
