--- a/template/ballet-pumps.html
+++ b/template/ballet-pumps.html
@@ -96,11 +96,13 @@
       <p>Address: kodego
         18th floor, The W Fifth Avenue, 5th Ave, Taguig, 1630 Metro Manila</p>
       <div class="row-cols-auto d-flex">
-        <div class="col-sm-10">
-          <input type="email" class="form-control" id="form-control" placeholder="Enter Your Email">
+        <div class="col-sm-3">
+          <input type="email" class="form-control" class="footer-form-control" placeholder="Enter Your Email">
           <button href="" class="btn rounded-pill btn-white mt-3 text-bg-warning" type="submit"
             role="button">Subscribe</button>
         </div>
+      </div>
+    </div>
   </footer>
   <script>
     getJSONData("/data/ballet-pumps.json");
