--- a/template/minimal-sneakers.html
+++ b/template/minimal-sneakers.html
@@ -85,22 +85,24 @@
     </div>
   </div>
   <header>
-    <h1 class="text-center mt-5">Minimal Sneakers</h1>
+    <h1 class="text-center categories mt-5">Minimal Sneakers</h1>
     <figure id="container"></figure>
   </header>
   <footer id="footer">
-    <div class="mt-2 ms-5">
+    <div class="mt-2 ms-3 container2">
       <span style="font-size: 1.5rem;font-weight: bold;">Shazada</span>
       <p>Phone: 02-8123-4567</p>
       <p>Email: group4@gmail.com</p>
       <p>Address: kodego
         18th floor, The W Fifth Avenue, 5th Ave, Taguig, 1630 Metro Manila</p>
       <div class="row-cols-auto d-flex">
-        <div class="col-sm-10">
-          <input type="email" class="form-control" id="form-control" placeholder="Enter Your Email">
+        <div class="col-sm-3">
+          <input type="email" class="form-control" class="footer-form-control" placeholder="Enter Your Email">
           <button href="" class="btn rounded-pill btn-white mt-3 text-bg-warning" type="submit"
             role="button">Subscribe</button>
         </div>
+      </div>
+    </div>
   </footer>
   <script>
     getJSONData("/data/minimal-sneakers.json");
