--- a/template/about.html
+++ b/template/about.html
@@ -82,7 +82,7 @@
     </div>
   </div>
   <header>
-    <h1 class="text-center">About Us</h1>
+    <h1 class="text-center about-us-header">About Us</h1>
   </header>
   <section class="about-us-bg">
     <article class="about-us">
