--- a/template/men-categories.html
+++ b/template/men-categories.html
@@ -52,7 +52,7 @@
             <a class="nav-link" href="/template/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">Sign in</a>
+            <a class="nav-link" href="/template/signin.html">Sign in</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -105,22 +105,6 @@
       </div>
     </div>
   </section>
-  <footer id="shazada-footer">
-    <div class="mt-2 ms-5 container">
-      <span style="font-size: 1.5rem;font-weight: bold;">Shazada</span>
-      <p>Phone: 02-8123-4567</p>
-      <p>Email: group4@gmail.com</p>
-      <p>Address: kodego
-        18th floor, The W Fifth Avenue, 5th Ave, Taguig, 1630 Metro Manila</p>
-      <div class="row-cols-auto d-flex">
-        <div class="col-sm-3">
-          <input type="email" class="form-control" class="footer-form-control" placeholder="Enter Your Email">
-          <button href="" class="btn rounded-pill btn-white mt-3 text-bg-warning" type="submit"
-            role="button">Subscribe</button>
-        </div>
-      </div>
-    </div>
-  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
