footer-copyright implementation

--- a/template/about.html
+++ b/template/about.html
@@ -93,6 +93,10 @@
       <p>our male and women to buy more shoes in our site.</p>
     </article>
   </section>
+  </footer>
+  <div class="footer bg-light p-2 text-center fw-bold pt-4">
+    <p>© 2023 Copyright: shazada.com</p>
+  </div>
   <!--Bootstrap Javascript CDN-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
