--- a/template/signin.html
+++ b/template/signin.html
@@ -73,6 +73,9 @@
             </div>
         </div>
     </div>
+    <div class="footer bg-light p-2 text-center fw-bold pt-4" style="margin-top: 10%;">
+        <p>© 2023 Copyright: shazada.com</p>
+    </div>
     <script type="module">
 
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
