--- a/template/men-categories.html
+++ b/template/men-categories.html
@@ -105,6 +105,9 @@
       </div>
     </div>
   </section>
+  <div class="footer bg-light p-2 text-center fw-bold pt-4" style="margin-top: 7%;">
+    <p>© 2023 Copyright: shazada.com</p>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
