--- a/template/women-categories.html
+++ b/template/women-categories.html
@@ -117,6 +117,9 @@
       </div>
     </div>
   </section>
+  <div class="footer bg-light p-2 text-center fw-bold pt-4" style="margin-top: 3%;">
+    <p>© 2023 Copyright: shazada.com</p>
+  </div>
   <!--Bootstrap Javascript CDN-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
