change title bar into Minimal Sneaker

--- a/template/minimal-sneakers.html
+++ b/template/minimal-sneakers.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Minimal Sneakers</title>
+  <title>Minimal Sneaker</title>
   <!--META TAGS-->
   <meta charset="UTF-8">
   <meta name="description" content="online shoes shopping cart">
@@ -63,8 +63,8 @@
       </div>
     </div>
   </nav>
-  <!--Checkout page static modal-->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <!-- Checkout page static modal-->
+  <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -80,7 +80,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <header>
     <h1 class="text-center categories mt-5">Minimal Sneakers</h1>
     <figure id="container"></figure>
