change set import to push import

--- a/template/signin.html
+++ b/template/signin.html
@@ -118,7 +118,7 @@
                         password: password.value
                     };
 
-                    set(userSignUp, user);
+                    push(userSignUp, user);
                     displayName.value = "";
                     email.value = "";
                     password.value = "";
