Updated Sign Up function

--- a/template/signin.html
+++ b/template/signin.html
@@ -137,7 +137,7 @@
             } else {
                 if (supassword.value === confirmPassword.value) {
                     const auth = getAuth();
-                    createUserWithEmailAndPassword(auth, suemail, supassword)
+                    createUserWithEmailAndPassword(auth, suemail.value, supassword.value)
                         .then(() => {
                             updateProfile(auth.currentUser, {
                                 displayName: displayName.value
