change facebook into shazada vercel

--- a/template/checkout.html
+++ b/template/checkout.html
@@ -78,7 +78,7 @@
                     },
                 ],
                 mode: "subscription",
-                successUrl: "https://www.facebook.com",
+                successUrl: "http://shazada.vercel.app/",
                 cancelUrl: "https://www.twitter.com"
             }).then(function (result) {
                 alert(result);
