renamed cart to men-cart

--- a/template/men-categories.html
+++ b/template/men-categories.html
@@ -54,7 +54,7 @@
             <a class="nav-link" href="/template/signin.html">Sign in</a>
           </li>
         </ul>
-        <a href="/cart.html">
+        <a href="/men-cart.html">
           <div class="cart">
             <i class="bi bi-cart2"></i>
             <div id="cartAmount" class="cartAmount">0</div>
