removed duplicate html boilerplate

--- a/template/about.html
+++ b/template/about.html
@@ -46,7 +46,7 @@
             <a class="nav-link" href="/template/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/template/signin.html">Sign in</a>
+            <a class="nav-link" href="/template/signin.html" id="lnkSignIn">Sign in</a>
           </li>
         </ul>
         <a href="/cart.html">
